# automath

./: .gitignore  .pylintrc  pyproject.toml  summary.md  test.ipynb  test.py  tests.py  tests_fast.py  tests_no_cache.py  train.py
.github/: copilot-instructions.md
agent/: demo_agent.py  simple_agent.py  smart_agent.py  train.py  trainer.py
config/: agent_settings.py  settings.py
env/: action.py  action_impl.py  base_agent.py  composite.py  core.py  env_utils.py  environment.py  full_state.py  goal_env.py  meta_env.py  node_data.py  node_types.py  reward.py  state.py  symbol.py  trainer.py
environment/: action.py  action_impl.py  action_old.py  core.py  environment.py  full_state.py  full_state_old.py  meta_env.py  reward.py  state.py
impl/: expr_zero_env.py  goal_env.py  node_type_handler.py  node_types.py  partial_action_types.py  reformulation_action_types.py
test_suite/: action_impl_test.py  agent_test.py  arithmetic_test.py  basic_test.py  boolean_test.py  control_flow_test.py  indices_test.py  structural_test.py  test.ipynb  test_root.py  test_utils.py
test_suite/action_impl/: action_00_action_meta.py  action_01_goal_test.py  action_01_manage_scratch.py  action_01_state_meta.py  action_02_manage_scratch.py  action_03_define_scratch.py  action_04_update_scratch.py  action_05_manage_args_group.py
utils/: env_logger.py  module_utils.py  types.py
