[project]
name = "automath"
version = "0.0.0"
authors = []
description = ""
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.ruff]
lint.ignore = ["E741"] # ambiguous variable name
